--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ julia:
 os:
     - linux
     - osx
+
+after_success:
+- julia -e 'cd(Pkg.dir("MyPkg")); Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
 coveralls: true
 codecov: true
 matrix:
