--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -38,7 +38,7 @@ test_script:
   - C:\julia\bin\julia -e "%JL_TEST_SCRIPT%"
 
 after_test:
-- C:\projects\julia\bin\julia -e "cd(Pkg.dir(\"MyPkg\")); Pkg.add(\"Coverage\"); using Coverage; Codecov.submit(process_folder())"
+- C:\projects\julia\bin\julia -e "cd(Pkg.dir(\"FinNetValu\")); Pkg.add(\"Coverage\"); using Coverage; Codecov.submit(process_folder())"
 
 # # Uncomment to support code coverage upload. Should only be enabled for packages
 # # which would have coverage gaps without running on Windows
