--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -37,8 +37,8 @@ test_script:
   - echo "%JL_TEST_SCRIPT%"
   - C:\julia\bin\julia -e "%JL_TEST_SCRIPT%"
 
-after_test:
-  - C:\julia\bin\julia -e "cd(Pkg.dir(\"FinNetValu\")); Pkg.add(\"Coverage\"); using Coverage; Codecov.submit(process_folder())"
+#after_test:
+#  - C:\julia\bin\julia -e "cd(Pkg.dir(\"FinNetValu\")); Pkg.add(\"Coverage\"); using Coverage; Codecov.submit(process_folder())"
 
 # # Uncomment to support code coverage upload. Should only be enabled for packages
 # # which would have coverage gaps without running on Windows
